--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,12 @@ jobs:
         bundle config path vendor/bundle
         bundle install --binstubs --jobs 4 --retry 3
 
+    - name: Compile extension
+      env:
+        BUNDLE_GEMFILE: GemfileCI
+      run: |
+        bundle exec rake compile
+
     - name: Run tests
       env:
         BUNDLE_GEMFILE: GemfileCI
